[gd_scene load_steps=13 format=3 uid="uid://cwmpxv70mxrp1"]

[ext_resource type="Texture2D" uid="uid://dg7akbibex5wv" path="res://abilities/spells/fire_ball/tile012.png" id="1_rml4e"]
[ext_resource type="Script" path="res://scenes/ability/fire_ability/fire_ability.gd" id="1_ro1mw"]
[ext_resource type="PackedScene" uid="uid://b6x038dr1a5q7" path="res://effect.tscn" id="2_57caw"]
[ext_resource type="Texture2D" uid="uid://bxed3uownatx7" path="res://abilities/spells/fire_ball/tile013.png" id="2_kw42c"]
[ext_resource type="Texture2D" uid="uid://ijn72e7qpjb2" path="res://abilities/spells/fire_ball/tile014.png" id="3_c3xp4"]
[ext_resource type="Texture2D" uid="uid://l5vu6l33luc6" path="res://abilities/spells/fire_ball/tile015.png" id="4_3cfo1"]
[ext_resource type="Texture2D" uid="uid://chx4ymh3a4yfx" path="res://abilities/spells/fire_ball/tile016.png" id="5_mfq57"]
[ext_resource type="Texture2D" uid="uid://kg6wy4ahwdgb" path="res://abilities/spells/fire_ball/tile017.png" id="6_8nixa"]

[sub_resource type="Animation" id="Animation_axqpr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_rml4e")]
}

[sub_resource type="Animation" id="Animation_senna"]
resource_name = "fire_animation"
length = 0.25
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_rml4e"), ExtResource("2_kw42c"), ExtResource("3_c3xp4"), ExtResource("4_3cfo1"), ExtResource("5_mfq57"), ExtResource("6_8nixa")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o5myc"]
_data = {
"RESET": SubResource("Animation_axqpr"),
"fire_animation": SubResource("Animation_senna")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_f62i6"]
radius = 5.0

[node name="Fire_ability" type="Node2D"]
script = ExtResource("1_ro1mw")
swirl_effect = ExtResource("2_57caw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fire_animation"
libraries = {
"": SubResource("AnimationLibrary_o5myc")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rml4e")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.3, 0)
shape = SubResource("CircleShape2D_f62i6")

[node name="fireball_lifetime" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
